discussion/kv_engine/181349/181349_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP to show Trond

Change-Id: Id2ca723de182ffa024f5eb8cae0e018b33626c58

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-10-14 08:39:57.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-10-14 08:40:47.000000000
Message: 
Patch Set 1:

(1 comment)
Line:948, daemon/buckets.cc -> Want to trigger a call of resume() here (and other later steps as I build up the tests).

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-14 09:04:38.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20426/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/daemon/buckets_test.cc b/daemon/buckets_test.cc
index e83a904b9..dc1a34a16 100644
--- a/daemon/buckets_test.cc
+++ b/daemon/buckets_test.cc
@@ -397,7 +397,7 @@ TEST_F(BucketManagerTest, PauseBucketCancellable) {
         }
     };
 
-    bucketPausingListenerFunc = [&amp;testFixture = *this](std::string_view name) {
+    bucketPausingListenerFunc = [&amp; testFixture = *this](std::string_view name) {
         // When changes to Pausing, issue a resume() request which should
         // cancel the pause.
         testFixture.public_resume(&quot;2&quot;, &quot;mybucket&quot;);

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20426/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21176/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets_test.cc:51:35: error: base class has incomplete type [clang-diagnostic-error]
    class MockConnection : public ConnectionIface {};
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/engine.h:50:7: note: forward declaration of "ConnectionIface"
class ConnectionIface;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21176/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets_test.cc:51:35:
error: base class has incomplete type [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21176/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50380/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/buckets_test.cc(51): error C2504: "ConnectionIface": base class undefined ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50380/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10908/ : FAILURE

Compile error at [2022-10-14T08:54:52.433Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1706:13:
error: enumeration value "bucket_paused" not handled in switch [-Werror,-Wswitch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10908/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11005/ : FAILURE

Compile error at [2022-10-14T08:50:59.710Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1706:12:
error: enumeration value ?bucket_paused? not handled in switch [-Werror=switch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11005/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23201/ : FAILURE

Compile error at [2022-10-14T08:58:51.594Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1706:12:
error: enumeration value ?bucket_paused? not handled in switch [-Werror=switch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23201/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31620/ : FAILURE

Compile error at [2022-10-14T09:02:10.513Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1706:13:
error: enumeration value "bucket_paused" not handled in switch [-Werror,-Wswitch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31620/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24436/ : FAILURE

Compile error at [2022-10-14T08:59:14.420Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1706:13:
error: enumeration value "bucket_paused" not handled in switch [-Werror,-Wswitch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24436/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23598/ : FAILURE

Compile error at [2022-10-14T08:57:58.417Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1706:12:
error: enumeration value ?bucket_paused? not handled in switch [-Werror=switch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23598/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22614/ : FAILURE

Compile error at [2022-10-14T09:04:22.581Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1706:13:
error: enumeration value "bucket_paused" not handled in switch [-Werror,-Wswitch]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22614/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42266/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-10-19 14:28:46.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
